--- a/index.css
+++ b/index.css
@@ -8,31 +8,36 @@
   font-family: 'Saira Condensed', sans-serif;
 }
 
+
 .container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
+  /* position: relative; */
+  /* width: 100%; */
+  /* height: 100vh; */
   background-image: url(./images/backimg.jpg);
-  background-size: 100%;
+  background-size: cover;
+  /* background-size: 100% 100%; */
 
 }
 
 nav {
   display: flex;
-  width: 90%;
-  margin-left: 100px;
+  width: 60%;
+  /* margin-left: 100px; */
+  margin-left: 18%;
+  margin-right: 0%;
   align-items: center;
   justify-content: space-between;
   background-color: rgba(255, 255, 255, 0.089);
 
-  position: sticky;
-  top: 0;
+  /* position: sticky;
+  top: 0; */
   /* position: fixed; */
 }
 
 nav ul li {
   display: inline-block;
-  margin: 10px 20px;
+  margin: 5px 15px;
+  padding-right: 135px;
 }
 
 nav ul li a {
@@ -44,78 +49,92 @@ nav ul li a {
 }
 
 .home {
-  color: white;
+  color: rgb(255, 255, 255);
   margin-top: 13%;
+  padding-bottom: 15%;
 
 }
-.home h1{
+
+.home h1 {
   font-size: 90px;
   color: rgb(235, 226, 255);
 }
-.home h1 span{
+
+.home h1 span {
   color: rgb(116, 94, 255);
 }
-.home h2{
+
+.home h2 {
   font-size: 40px;
   color: rgb(167, 154, 255);
   background-color: rgba(0, 0, 0, 0.535);
 
 }
-.home h3{
+
+.home h3 {
   font-size: 30px;
   color: rgb(167, 154, 255);
+  /* align-items: center;
+  justify-content: center; */
 }
 
-#about{
+#about {
   /* margin-right: 0%;
   margin-top: 0%;
   margin-left: 0%; */
   background-image: url(./images/backimg2.jpg);
   background-size: cover;
-  
+
 
 }
-.heading{
+
+.heading {
   text-align: center;
   color: rgb(116, 94, 255);
-  
+
 }
 
-.heading h2{
+.heading h2 {
   font-size: 40px;
-  
+
 }
 
-.heading span{
+.heading span {
   font-size: 25px;
   color: rgb(209, 154, 255)
 }
 
-.about-content{
+.about-content {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
 
-  
 }
 
-.imageabout img{
-  width: 250px;
-  margin-left: 30%;
-  margin-top: 10%;
+
+.imageabout img {
+  width: 35%;
+  margin-left: 20%;
+  margin-top: 110px;
   margin-bottom: 10%;
+  margin-right: 20%;
+  box-shadow: 4px 4px 4px 4px;
+  border-radius: 10%;
+
 }
 
-.about-text{
+
+.about-text {
   font-size: 18px;
   font-weight: 500;
   text-align: justify;
   margin-top: 100px;
+  margin-bottom: 10%;
   color: rgb(170, 170, 170);
   margin-right: 10%;
-  
+
 }
 
-.about-text a{
+.about-text a {
   background-color: rgb(38, 14, 72);
   padding: 10px 18px;
   text-decoration: none;
@@ -126,114 +145,203 @@ nav ul li a {
   margin-bottom: 7%;
   border-radius: 5px;
 
-
-
 }
 
-.information{
+
+.information {
   margin: 1rem 0 1.4rem;
 
 }
 
-.information .info-box{
+.information .info-box {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
-  margin-top: 3%;
+  margin-top: 1%;
 
 }
 
-.information .info-box span{
+.information .info-box span {
   font-weight: 500;
-  margin-left: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 
 }
+
 /* skills */
-#skills{
-  margin-top: 0%;
-  /* background-color: darkcyan; */
+#skills {
   background-image: url(./images/backimg2.jpg);
   background-size: cover;
-}
-
-.skill-container{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-  align-items: center;
-  gap: 2rem;
-
-}
-.skill-img img{
-  width: 70%;
-  object-position: center;
-  padding-left: 4rem;
-  margin-top: 10%;
-  margin-bottom: 10%;
-
-
-}
-.bar-box{
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 0;
-  margin-bottom: 1rem;
-  color: white;
-  margin-left: 10%;
-}
-.bar-box span{
-  font-size: 23px;
-  font-weight: 700;
-}
-
-.light-bar{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 8px;
-  background-color: rgb(132, 0, 255);
-  border-radius: 8px;
-  
-}
-
-.percent-bar{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 8px;
-  background-color: rgb(78, 20, 133);
-  border-radius: 8px;
-
-}
-.html-bar{
-  width: 90%;
-}
-.css-bar{
-  width: 92%;
-}
-.js-bar{
-  width: 80%;
-}
-.angular-bar{
-  width: 80%;
-}
-
-#contact{
   margin-left: 0%;
   margin-top: 0%;
   margin-right: 0%;
-  background-color: rgb(23, 6, 53);
 }
-.iconDiv{
+
+.skill-container {
+  display: grid;
+  margin-top: 50px;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-bottom: 30px;
+  gap: 2rem;
+}
+
+.skill-img img {
+  width: 70%;
+  object-position: center;
+  padding-left: 1rem;
+  border-radius: 10%;
+}
+
+.skill-bars {
+  padding: 25px 30px;
+  /* width: 600px; */
+  background: #360055a7;
+
+  border-radius: 10px;
+}
+
+.skill-bars .bar {
+  margin: 20px 0;
+}
+
+.skill-bars .bar:first-child {
+  margin-top: 0px;
+}
+
+.skill-bars .bar .info {
+  margin-bottom: 5px;
+}
+
+.skill-bars .bar .info span {
+  font-weight: 500;
+  font-size: 17px;
+  opacity: 0;
+  animation: showText 0.5s 1s linear forwards;
+  color: rgb(234, 140, 245);
+}
+
+@keyframes showText {
+  100% {
+    opacity: 1;
+  }
+}
+
+.skill-bars .bar .progress-line {
+  height: 10px;
+  width: 100%;
+  background: #68036d;
+  position: relative;
+  transform: scaleX(0);
+  transform-origin: left;
+  border-radius: 10px;
+
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05),
+    0 1px rgba(255, 255, 255, 0.8);
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+@keyframes animate {
+  100% {
+    transform: scaleX(1);
+  }
+}
+
+.bar .progress-line span {
+  height: 100%;
+  position: absolute;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  background: #74009b;
+  animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+.bar .progress-line.html span {
+  width: 90%;
+}
+
+.bar .progress-line.css span {
+  width: 88%;
+}
+
+.bar .progress-line.python span {
+  width: 65%;
+}
+
+.bar .progress-line.mysql span {
+  width: 50%;
+}
+
+.progress-line span::before {
+  position: absolute;
+  content: "";
+  top: -10px;
+  right: 0;
+  height: 0;
+  width: 0;
+  border: 7px solid transparent;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  border-top-color: #000000;
+  opacity: 0;
+  animation: showText2 0.5s 1.5s linear forwards;
+}
+
+.progress-line span::after {
+  position: absolute;
+  top: -28px;
+  right: 0;
+  font-weight: 500;
+  background: #4f009d78;
+  color: #fff;
+  padding: 1px 8px;
+  font-size: 12px;
+  border-radius: 3px;
+  opacity: 0;
+  animation: showText2 0.5s 1.5s linear forwards;
+}
+
+@keyframes showText2 {
+  100% {
+    opacity: 1;
+  }
+}
+
+.progress-line.html span::after {
+  content: "90%";
+}
+
+.progress-line.css span::after {
+  content: "88%";
+}
+
+.progress-line.python span::after {
+  content: "65%";
+}
+
+.progress-line.mysql span::after {
+  content: "50%";
+}
+
+
+#contact {
+  background-color: rgb(24, 0, 49);
+  margin-left: 0%;
+  margin-top: 0%;
+  margin-right: 0%;
+}
+
+.iconDiv {
   margin-top: 2%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.icon{
+
+.icon {
   width: 40px;
   height: 40px;
   border: 1px solid;
@@ -244,16 +352,339 @@ nav ul li a {
   margin: 0 10px;
   background-color: black;
 }
-.icon i{
+
+.icon i {
   font-size: 20px;
 }
 
-.icon i:hover{
+.icon i:hover {
   /* background-color: rgb(255, 0, 0); */
   color: rgb(255, 255, 255);
 }
-footer{
+
+footer {
   margin-top: 1rem;
   font-weight: lighter;
   color: rgb(96, 96, 96);
+}
+
+
+
+
+
+
+
+@media screen and(max-width: 800px) {
+  .container {
+    width: 100%;
+    height: 60vh;
+  }
+
+  /* nav {
+    width: 90%;
+    margin-left: 20px;
+    margin-right: 0px;
+  }
+
+  nav ul li {
+    margin: 5px 10px;
+  } */
+
+  .home {
+    margin-top: 13%;
+
+  }
+
+  .home h1 {
+    font-size: 45px;
+  }
+
+  .home h2 {
+    font-size: 20px;
+  }
+
+  .home h3 {
+    font-size: 15px;
+  }
+
+  .heading h2 {
+    font-size: 30px;
+
+  }
+
+  .heading span {
+    font-size: 20px;
+  }
+
+  .imageabout img {
+    width: 40%x;
+
+  }
+
+  .about-text {
+    font-size: 10px;
+    /* font-weight: 500;
+    margin-top: 20px;
+    margin-right: 20%;
+    margin-left: 20%;
+    line-height: 1; */
+  }
+
+  .about-text a {
+    padding: 10px 18px;
+    margin-top: 5%;
+    margin-bottom: 7%;
+    border-radius: 5px;
+  }
+
+  .information .info-box span {
+    font-weight: 500;
+    margin-left: 10px;
+    margin-right: 90px;
+  }
+
+}
+
+@media(max-width: 773px) {
+  .about-text {
+    font-size: 14px;
+  }
+}
+
+
+@media(max-width: 668px) {
+  .about-text {
+    font-size: 13px;
+  }
+}
+
+@media(max-width: 604px) {
+  .about-text {
+    font-size: 12px;
+  }
+}
+
+@media(max-width: 475px) {
+  .about-text {
+    font-size: 11px;
+  }
+}
+
+@media(max-width: 403px) {
+  .about-text {
+    font-size: 10px;
+  }
+}
+
+@media(max-width: 385px) {
+  .about-text {
+    font-size: 9px;
+  }
+}
+
+
+
+
+
+@media(max-width: 450px) {
+  .home h1 {
+    font-size: 60px;
+  }
+
+  .home h2 {
+    font-size: 35px;
+  }
+
+  .home h3 {
+    font-size: 30px;
+  }
+}
+
+
+/* @media(max-width: 535px) {
+  .skill-bars{
+    height: 180px;
+  }
+} */
+
+
+
+@media(max-width: 1453px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 120px;
+  }
+}
+@media(max-width: 1353px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 110px;
+  }
+}
+@media(max-width: 1286px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 100px;
+  }
+}
+@media(max-width: 1220px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 90px;
+  }
+}
+@media(max-width: 1153px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 80px;
+  }
+}
+@media(max-width: 1086px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 70px;
+  }
+}
+@media(max-width: 1020px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 60px;
+  }
+}
+@media(max-width: 953px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 50px;
+  }
+}
+@media(max-width: 886px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 40px;
+  }
+}
+@media(max-width: 820px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 30px;
+  }
+}
+@media(max-width: 753px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 20px;
+  }
+}
+@media(max-width: 686px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 10px;
+  }
+}
+@media(max-width: 620px) {
+  /* nav ul li a {
+    font-size: 15px;
+  } */
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+
+@media(max-width: 553px) {
+  nav ul li a {
+    font-size: 15px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 536px) {
+  nav ul li a {
+    font-size: 14px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 519px) {
+  nav ul li a {
+    font-size: 13px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 502px) {
+  nav ul li a {
+    font-size: 12px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 485px) {
+  nav ul li a {
+    font-size: 11px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 468px) {
+  nav ul li a {
+    font-size: 10px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 451px) {
+  nav ul li a {
+    font-size: 9px;
+  }
+  nav ul li {
+    padding-right: 0px;
+  }
+}
+@media(max-width: 434px) {
+  nav ul li a {
+    font-size: 8px;
+  }
+  nav ul li {
+    padding-right: 0px;
+    margin: 5px 10px;
+  }
+}
+@media(max-width: 351px) {
+  nav ul li a {
+    font-size: 7px;
+  }
+  nav ul li {
+    padding-right: 0px;
+    margin: 5px 5px;
+  }
 }
