--- a/index.css
+++ b/index.css
@@ -199,7 +199,6 @@ nav ul li a {
   padding: 25px 30px;
   /* width: 600px; */
   background: #360055a7;
-
   border-radius: 10px;
 }
 
@@ -686,5 +685,19 @@ footer {
   nav ul li {
     padding-right: 0px;
     margin: 5px 5px;
+  }
+}
+@media(max-width: 583px){
+  .skill-container {
+    display: block;
+  }
+  .skill-img img{
+    padding-left: 3rem;
+  }
+}
+
+@media(max-width: 331px){
+  .skill-img img{
+    padding-left: 2.5rem;
   }
 }
